[Feature] spring自动注入 map 和List demo + mybatis 代码

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,10 +6,13 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 
 #mybatis.config-location= 基本不用
-mybatis.mapper-locations=classpath:mapper/*.xml
-mybatis.configuration.map-underscore-to-camel-case=true
-#mybatis.mapper-locations=classpath:com/icoding/mybatisdemo/mapper/xml/*.xml
+#mybatis.mapper-locations=classpath:mapper/*.xml
+mybatis.mapper-locations=classpath:com/icoding/mybatisdemo/mapper/xml/*.xml
+#mybatis.configuration.map-underscore-to-camel-case=true
 
 #日志打印，配置sql 打印
 logging.level.com.icoding.mybatisdemo.mapper=debug
 
+#server.port=8091  对比yaml 文件,properties 的优先级比yaml 高
+#自定义静态资源位置处理， 配置之后所有的自动配置失效
+#spring.resources.static-locations=classpath:/fangpan
