--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,27 @@
             <artifactId>druid</artifactId>
             <version>RELEASE</version>
         </dependency>
+
+
+        <!--单体引用 thymeleaf-->
+        <!--可以在SpringBoot 官网中拿到对应的pom-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+
+        <!--<dependency>-->
+            <!--<groupId>org.thymeleaf</groupId>-->
+            <!--<artifactId>thymeleaf</artifactId>-->
+            <!--<version>3.0.11.RELEASE</version>-->
+        <!--</dependency>-->
+        <!--js 文件-->
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>jquery</artifactId>
+            <version>3.4.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
